--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~4.1.1",
